Updatd view to use new layout

--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -6,22 +6,32 @@
    
 }
 
+<h2>@Model.SeriesTitle</h2>
 
-<h1>@Model.SeriesTitle</h1>
-<h2>Issue #@Model.IssueNumber</h2>
-        
-<h5>Description:</h5>
-<div>@Html.Raw(Model.DescriptionHtml)</div>
-        
-@if (Model.Artists.Length > 0)
-{
-    <h5>Artists</h5>
-    <div>
-        <ul>
-            @foreach (var artist in Model.Artists)
-        {
-                <li>@artist.Role: @artist.Name</li>
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+            <h5><label>Series Title:</label>@Model.SeriesTitle</h5>
+            <h5><label>Issue #:</label> @Model.IssueNumber</h5>
+            <h5><label>Favorite:</label> @(Model.Favorite ? "Yes": "No")</h5>
+            @if (Model.Artists.Length > 0)
+            {
+                <h5>Artists</h5>
+                <div>
+                    <ul>
+                        @foreach (var artist in Model.Artists)
+                        {
+                            <li>@artist.Role: @artist.Name</li>
+                        }
+                    </ul>
+                </div>
             }
-        </ul>
+        </div>
+        <h5>Description</h5>
+        <p>@Model.DescriptionHtml</p>
     </div>
-}
+    <div class="col-md-6">
+        <img src="/Images/@Model.CoverImageFileName"
+             alt="@Model.SeriesTitle" class="img-responsive" />
+    </div>
+</div>
