Add feature to allow user to move back to home page from detail page

--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ComicBookGallery.Models.ComicBook
 
 @{
-    ViewBag.Title = Model.DisplayText; 
+    ViewBag.Title = Model.DisplayText;
+    ViewBag.ShowBackBar = true; 
 }
 
 <h2>@Model.SeriesTitle</h2>
