--- a/src/ComicBookGallery/Views/Shared/_Layout.cshtml
+++ b/src/ComicBookGallery/Views/Shared/_Layout.cshtml
@@ -26,6 +26,16 @@
             </div>
         </div>
     </div>
+    
+    @if (ViewBag.ShowBackBar != null && ViewBag.ShowBackBar)
+    {
+    <div class="backbar">
+        <div class="container">
+            @Html.ActionLink("Return List", "Index", null, new {@class = "btn btn-default"})
+        </div>
+    </div>
+    }
+
 
     <div class="container body-content">
         @RenderBody()
